# light_sdk_c

./: Cargo.toml  build.rs  namada_light_sdk.h
examples/: README.md  example.cpp  namada_light_sdk.h
src/: lib.rs  utils.rs
src/reading/: mod.rs
src/transaction/: account.rs  mod.rs
src/types/: mod.rs
src/writing/: mod.rs
